 fdo#66283 - MathML export: remove useless mrow/mstyle with font commands

Change-Id: I57870a22ef915950fe177dcb75ab31a25f2520c8