starmath/source/mathmlexport.hxx
@@ -84,7 +84,8 @@ protected:
     void ExportNodes(const SmNode *pNode, int nLevel);
     void ExportTable(const SmNode *pNode, int nLevel);
     void ExportLine(const SmNode *pNode, int nLevel);
-    void ExportExpression(const SmNode *pNode, int nLevel);
+    void ExportExpression(const SmNode *pNode, int nLevel,
+                          bool bNoMrowContainer = false);
     void ExportText(const SmNode *pNode, int nLevel);
     void ExportMath(const SmNode *pNode, int nLevel);
     void ExportPolygon(const SmNode *pNode, int nLevel);
